--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     background-color: #2730b8;
     margin: 0;
     overflow: hidden;
+    height: 100%;
+    width: 100%;
     /* Prevent scrolling on the body */
 }
 
@@ -12,7 +14,7 @@ canvas {
     /* Center the canvas */
     border: 2px solid #000;
     /* Add a border to the canvas */
+    height: 50%;
+    width: 50%;
 
 }
-
-<svg id="uuid-9526afdc-edf2-4596-a66d-c8c748c45ddd" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 7"><rect y="5" width="6" height="2" style="stroke-width:0px;" /><rect x="2" y="2" width="3" height="3" style="stroke-width:0px;" /><rect width="6" height="2" style="stroke-width:0px;" /><rect x="5" y="3" width="3" height="1" style="stroke-width:0px;" /></svg>
